--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-env/*
+# Ignore Python virtual environment directory
+env/
+
+# Ignore Python bytecode files
+__pycache__/
+*.pyc
+
+# Ignore system files
+.DS_Store
+Thumbs.db
+
+# Ignore logs
+*.log
